--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,16 @@
 
 <body>
 
-    {{> nav/navbar}}
+    <nav>
+    <div class="nav-wrapper topnav">
+        
+        <ul class="left" id="nav-mobile">
+            <li><a href="/getnews">Get Sports News</a></li>
+            <li><a href="/cleararticles">Clear Articles</a></li>
+            
+        </ul>
+    </div>
+</nav>
 
     <main>
         <div class="container">
