--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,17 +2,15 @@
 <div>
     <h1 class="card z-depth-3 center-align">Sports news from Eurosport.com</h1>
  
-        
 </div>
 <div class="row">
     <div class="col s2"></div>
     <div class="col s8 left-align">
         {{#each article}}
-        <div class="card-panel">
-            <h4>{{this.title}}</h4>
-            <a href="/readArticle/{{this._id}}" class="waves-effect waves-light btn" id="btnSignUp">Read Article</a>
-
-        </div>
+ <div class="card-body">
+        <a target="_blank" class="card-title" href={{link}}>{{title}}</a>
+        <p data-toggle="modal" data-target="#notesModal" class="card-text" data-id={{_id}}</p>
+      </div>
 
         {{/each}}
     </div>
