comments and css

--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col s2"></div>
-    <form action="/comment/{{article._id}}" method="POST" class="card-panel col s8">
+    <form action="/note/{{article._id}}" method="POST" class="card-panel col s8">
         <h5>Note for this Article</h5>
         <div class="row">
             <div class="input-field">
