--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,24 +2,16 @@
 <html lang="en">
 
 <head>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    {{!-- Materialize Icons --}}
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
-    {{!-- Google Font --}}
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <!-- tab icon -->
-    <link rel="shortcut icon" href="assets/img/news-icon.png" />
     <title>Mongoscrap</title>
 </head>
 
 <body>
 
     <nav>
-    <div class="nav-wrapper topnav">
+    <div class="nav">
         
-        <ul class="left" id="nav-mobile">
+        <ul class="left" id="navlist">
             <li><a href="/getnews">Get Sports News</a></li>
             <li><a href="/cleararticles">Clear Articles</a></li>
             
@@ -33,7 +25,6 @@
         </div>
     </main>
 
-    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
    
 </body>
