--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,17 @@
   
 <div>
-    <h1 class="card z-depth-3 center-align">Sports news from Eurosport.com</h1>
- 
+    <h1 class="card center-align">Sports news from Eurosport.com</h1>
+
 </div>
+
+
+
 <div class="row">
     <div class="col s2"></div>
     <div class="col s8 left-align">
         {{#each article}}
+{{!-- 
+        We use modal here with the idea to be able to take and display notes down the road --}}
  <div class="card-body">
         <a target="_blank" class="card-title" href={{link}}>{{title}}</a>
         <p data-toggle="modal" data-target="#notesModal" class="card-text" data-id={{_id}}</p>
